[gd_scene load_steps=2 format=3 uid="uid://dk2i2fhoh7jq0"]

[ext_resource type="Script" path="res://Scripts/end_menu.gd" id="1_aoqxh"]

[node name="EndMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aoqxh")

[node name="EndContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -29.0
offset_right = 127.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndMessage" type="Label" parent="EndContainer"]
layout_mode = 2
text = "You are not suppose to see this"

[node name="RetryBtn" type="Button" parent="EndContainer"]
layout_mode = 2
text = "Neither this"

[node name="QuitBtn" type="Button" parent="EndContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="EndContainer/RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="EndContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
